анимация кружочки на блоках доработка, перестилизация

--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
                     <span>Это надёжно, срочно,<br> безопасно!</span>
                 </h2>
                 <ul class="advantages__list">
-                    <li class="advantages__item hover-circle-top">
+                    <li class="advantages__item hover-circle hover-circle-top">
                         <h3 class="advantages__title">Скорость и надёжность доставки</h3>
                         <div class="advantages__description">
                             <p>Срочная и прогнозируемая доставка, возможна только с помощью авиаперевозок. В небе нет
@@ -953,21 +953,21 @@
                                 Действует ускоренный процесс таможенного оформления</p>
                         </div>
                     </li>
-                    <li class="advantages__item hover-circle-left">
+                    <li class="advantages__item hover-circle hover-circle-left">
                         <h3 class="advantages__title ">Доступ к труднодоступным регионам</h3>
                         <div class="advantages__description">
                             <p>Дальний Восток, Сибирь, Арктика? Нам не важно!
                                 Преодолеем расстояния там, где другие не могут.</p>
                         </div>
                     </li>
-                    <li class="advantages__item hover-circle-top">
+                    <li class="advantages__item hover-circle hover-circle-top">
                         <h3 class="advantages__title">Широкие возможности для разных грузов</h3>
                         <div class="advantages__description">
                             <p>Для крупногабаритного груза проще подобрать транспортный самолёт, чем искать другой
                                 способ везти по земле.</p>
                         </div>
                     </li>
-                    <li class="advantages__item hover-circle-left">
+                    <li class="advantages__item hover-circle hover-circle-left">
                         <h3 class="advantages__title ">Самая высокая безопасность груза</h3>
                         <div class="advantages__description">
                             <p>Более высокий уровень безопасности груза, специализированная упаковка, стандарты
