шапка при скролле, коррекция всего

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <!--— LOADING -->
     <!--—BEGIN HEADER -->
-    <div class="main-content">
+    <div class="full-content">
         <div class="header__wrap">
             <header class="header">
                 <div class="header__top">
