доработки, анимация кнопки закрытия, доработки скролла и правки

--- a/index.html
+++ b/index.html
@@ -859,8 +859,14 @@
                                 </ol>
 
                             </div>
-                            <a class="cargo-types__modal-close icon-close" href="javascript:void(0);">
-                            </a>
+                            <div class="cargo-types__modal-close icon-close1">
+                                <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.78246 15.2175L15.2175 1.78249M1.78246 1.78249L15.2175 15.2175"
+                                        stroke="#0063C7" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </div>
                         </div>
                     </div>
 
@@ -1314,10 +1320,7 @@
                             <div class="accordion__content" id="faq-2" role="definition">
                                 <div class="accordion__content-inner">
                                     <div class="accordion__content-body">
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non animi excepturi
-                                            quisquam eos distinctio porro nulla. Impedit at vero voluptatem mollitia
-                                            quasi
-                                            veritatis sit quidem eius! Harum nostrum suscipit inventore.</p>
+                                        <p>Да, мы принимаем крупные грузы и готовы предоставить вам самолеты с увеличенным объемом фюзеляжа и повышенной грузоподъемностью. Каждый случай для нас уникальный и мы готовы рассчитать условия такой доставки в индивидуальном порядке с возможностью оказать вам персонализированное предложение</p>
                                     </div>
                                 </div>
                             </div>
@@ -1335,10 +1338,7 @@
                             <div class="accordion__content" id="faq-3" role="definition">
                                 <div class="accordion__content-inner">
                                     <div class="accordion__content-body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, iusto. At
-                                            quis
-                                            voluptates sapiente architecto quaerat! Vel atque, iusto itaque deserunt
-                                            praesentium maiores excepturi vero corporis quidem vitae mollitia fugit.</p>
+                                        <p>Мы доставляем любые грузы авиасообщением, в том числе даже деловую документацию весом всего в несколько грамм. Поэтому предлагаем написать вам нашим менеджерам через форму на сайте и мы рассчитаем для вас комфортные условия оперативной доставки</p>
                                     </div>
                                 </div>
                             </div>
@@ -1355,11 +1355,7 @@
                             <div class="accordion__content" id="faq-4" role="definition">
                                 <div class="accordion__content-inner">
                                     <div class="accordion__content-body">
-                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa quibusdam
-                                            minima
-                                            nihil harum esse quisquam accusantium, fugiat quidem, eaque, cum ipsa
-                                            provident
-                                            placeat? Voluptatum perspiciatis sit blanditiis ducimus eveniet eum.</p>
+                                        <p>Срок доставки в большинстве случаев зависит как от города и страны отправления, так и пункта назначения доставки. При этом свои поправки в расчеты вносят и вес, габариты, условия хранения и транспортировки разных типов грузов. Поэтому срок доставки всегда лучше уточнять у нас специалистов, но можете быть уверены — авиаперевозки являются самым высокоскоростным способом доставки на сегодняшний день</p>
                                     </div>
                                 </div>
                             </div>
@@ -1377,9 +1373,7 @@
                             <div class="accordion__content" id="faq-5" role="definition">
                                 <div class="accordion__content-inner">
                                     <div class="accordion__content-body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis soluta quia
-                                            rerum quidem! Reprehenderit maxime autem, debitis unde culpa fugiat cumque
-                                            aspernatur est ipsam esse. Quis ab voluptates molestiae nihil?</p>
+                                        <p>Однозначный ответ — да. Все дело в подготовке перевозимого контейнера или оборудовании самого грузового самолета, осуществляющего вашу перевозку. Мы всегда идем на встречу и готовы подобрать для вас борт, полностью отвечающий вашим требованиям к условиям доставки и транспортировки на любые расстояния</p>
                                     </div>
                                 </div>
                             </div>
