--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="header__body">
                     <div class="header__body-inner container">
-                        <nav class="header__menu">
+                        <nav class="header__menu" aria-label="Основная">
                             <ul class="header__menu-list">
                                 <li class="header__menu-item">
                                     <a class="header__menu-link " href="#transportation-cost">Расчёт стоимости </a>
@@ -859,7 +859,7 @@
                                 </ol>
 
                             </div>
-                            <div class="cargo-types__modal-close icon-close1">
+                            <div class="cargo-types__modal-close icon-close1" aria-label="Закрыть модальное окно">
                                 <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1.78246 15.2175L15.2175 1.78249M1.78246 1.78249L15.2175 15.2175"
@@ -1403,7 +1403,7 @@
             </div>
             <div class="footer__body container">
                 <div class="footer__left">
-                    <div class="footer__navigation">
+                    <nav class="footer__navigation" aria-label="Пользовательская">
                         <ul class="footer__navigation-list">
                             <li class="footer__navigation-item"><a href="#transportation-cost"
                                     class="footer__link">Расчёт
@@ -1418,7 +1418,7 @@
                                     работаем</a>
                             </li>
                         </ul>
-                    </div>
+                    </т>
 
                     <div class="footer__contacts">
                         <ul class="footer__contacts-list">
