замена путей и правка скрипта

--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@
             <div class="container">
                 <div class="footer__top ">
                     <a class="footer__logo logo" href="/" title="Home" aria-label="Home">
-                        <img src="./images/logo.svg" alt="" class="logo__image" width="140" height="32">
+                        <img src=".././images/logo.svg" alt="" class="logo__image" width="140" height="32">
                     </a>
                     <a class="button button-calc visible-mobile" href="#transportation-cost">
                         Расчёт стоимости <span class="icon icon--right-arrow"></span>
@@ -1403,7 +1403,7 @@
             </div>
             <div class="footer__body container">
                 <div class="footer__left">
-                    <nav class="footer__navigation" aria-label="Пользовательская">
+                    <div class="footer__navigation">
                         <ul class="footer__navigation-list">
                             <li class="footer__navigation-item"><a href="#transportation-cost"
                                     class="footer__link">Расчёт
@@ -1418,7 +1418,7 @@
                                     работаем</a>
                             </li>
                         </ul>
-                    </т>
+                    </div>
 
                     <div class="footer__contacts">
                         <ul class="footer__contacts-list">
