--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="header__top">
                     <div class="header__top-inner container">
                         <a class="header__logo logo" href="/" title="Home" aria-label="Home">
-                            <img src=".././images/logo.svg" alt="" class="logo__image" width="140" height="32">
+                            <img src="./images/logo.svg" alt="" class="logo__image" width="140" height="32">
                         </a>
                         <div class="header__contacts">
                             <a class="header__mail" href="mailto:info@jar-cargo.ru" title="Email" aria-label="Email">П:
@@ -1391,7 +1391,7 @@
             <div class="container">
                 <div class="footer__top ">
                     <a class="footer__logo logo" href="/" title="Home" aria-label="Home">
-                        <img src=".././images/logo.svg" alt="" class="logo__image" width="140" height="32">
+                        <img src="./images/logo.svg" alt="" class="logo__image" width="140" height="32">
                     </a>
                     <a class="button button-calc visible-mobile" href="#transportation-cost">
                         Расчёт стоимости <span class="icon icon--right-arrow"></span>
