--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
 
                 <div class="hero__media wow slideInRight" data-wow-duration="1s" data-wow-delay="0s">
-                    <video class="hero__video" autoplay muted loop playsinline>
+                    <video class="hero__video" autoplay muted loop playsinline   poster="./images/poster.webp">
                         <source src="./video/video.mp4" type="video/mp4">
                     </video>
                     <div class="hero__overlay"></div>
