--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAR-CARGO</title>
     <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="./libs/plugins/animate.min.css">
     <script src="./scripts/main.js" defer></script>
 
@@ -1223,12 +1223,12 @@
 
                     </h2>
                     <ul class="process__list">
-                        <div class="process__item process__item--active">
+                        <li class="process__item process__item--active">
                             <p class="process__text">Оставляете заявку</p>
                             <div class="process__circle">
                                 <div class="process__circle-inner"></div>
                             </div>
-                        </div>
+                        </li>
                         <li class="process__item">
                             <p class="process__text">Перезваниваем для <br> уточнения деталей</p>
                             <div class="process__circle">
