--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <form class="form-request">
                             <div class="form-request__cell field">
                                 <label class="field__label" for="from">Откуда</label>
-                                <input class="field__control" list="from_city" name="from" value="" type="text"
+                                <input id="from" class="field__control" list="from_city" name="from" value="" type="text"
                                     placeholder="Москва" />
                                 <datalist id="from_city">
                                     <option value="Москва">Москва</option>
@@ -311,7 +311,7 @@
                             </div>
                             <div class="form-request__cell field">
                                 <label class="field__label" for="to">Куда</label>
-                                <input class="field__control" list="to_city" name="to" value="" type="text"
+                                <input id="to" class="field__control" list="to_city" name="to" value="" type="text"
                                     placeholder="Абакан" />
                                 <datalist id="to_city">
                                     <option value="Абакан">Абакан</option>
@@ -920,8 +920,7 @@
                             <div class="swiper-slide">
                                 <div class="reviews__item">
                                     <div class="reviews__item-left">
-                                        <img src="./images/reviews/01.png" alt="Клиент Станицкий Михаил"
-                                            class="reviews__item-photo" />
+                                        <img src="./images/reviews/01.png" class="reviews__item-photo" alt="Клиент Станицкий Михаил" />
                                     </div>
                                     <div class="reviews__item-right">
                                         <div class="reviews__item-info">
@@ -945,8 +944,7 @@
                             <div class="swiper-slide">
                                 <div class="reviews__item">
                                     <div class="reviews__item-left">
-                                        <img src="./images/reviews/02.png" alt="Клиент Оксана Благодатова"
-                                            class="reviews__item-photo" />
+                                        <img src="./images/reviews/02.png" class="reviews__item-photo" alt="Клиент Оксана Благодатова" />
                                     </div>
                                     <div class="reviews__item-right">
                                         <div class="reviews__item-info">
@@ -970,8 +968,7 @@
                             <div class="swiper-slide">
                                 <div class="reviews__item">
                                     <div class="reviews__item-left">
-                                        <img src="./images/reviews/03.png" alt="Клиент Иван Корнер"
-                                            class="reviews__item-photo" />
+                                        <img src="./images/reviews/03.png" class="reviews__item-photo" alt="Клиент Иван Корнер"/>
                                     </div>
                                     <div class="reviews__item-right">
                                         <div class="reviews__item-info">
