--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         </div>
                         <a href="#transportation-cost" class="button button-calc wow fadeInUp" data-wow-duration="1s"
                             data-wow-delay="1.5s">Расчёт
-                            стоимости <span class="icon icon--right-arrow"> <span>
+                            стоимости <span class="icon icon--right-arrow"> </span>
                         </a>
                     </div>
                 </div>
