валидатор- коррекция аккордеона name faq

--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@
                     </div>
                     <div class="accordion-group">
                         <div class="accordion">
-                            <details class="accordion__details" name="faq" open>
+                            <details class="accordion__details"  open>
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-1">Почему авиаперевозки?</span>
@@ -1305,7 +1305,7 @@
                             </div>
                         </div>
                         <div class="accordion">
-                            <details class="accordion__details" name="faq">
+                            <details class="accordion__details"  >
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-2">Могу ли я отправить крупный груз за
@@ -1323,7 +1323,7 @@
                             </div>
                         </div>
                         <div class="accordion">
-                            <details class="accordion__details" name="faq">
+                            <details class="accordion__details"  >
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-3">Вы отправляете только крупные грузы или
@@ -1341,7 +1341,7 @@
                             </div>
                         </div>
                         <div class="accordion">
-                            <details class="accordion__details" name="faq">
+                            <details class="accordion__details"  >
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-4">Какой максимальный срок доставки?</span>
@@ -1358,7 +1358,7 @@
                             </div>
                         </div>
                         <div class="accordion">
-                            <details class="accordion__details" name="faq">
+                            <details class="accordion__details"  >
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-5">Безопасно отправлять продукты питания или
