валидатор- коррекция тегов img

--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
                             <div class="swiper-slide">
                                 <div class="reviews__item">
                                     <div class="reviews__item-left">
-                                        <img src="./images/reviews/01.png" class="reviews__item-photo" alt="Клиент Станицкий Михаил" />
+                                        <img src="./images/reviews/01.png" class="reviews__item-photo" alt="Клиент Станицкий Михаил">
                                     </div>
                                     <div class="reviews__item-right">
                                         <div class="reviews__item-info">
@@ -944,7 +944,7 @@
                             <div class="swiper-slide">
                                 <div class="reviews__item">
                                     <div class="reviews__item-left">
-                                        <img src="./images/reviews/02.png" class="reviews__item-photo" alt="Клиент Оксана Благодатова" />
+                                        <img src="./images/reviews/02.png" class="reviews__item-photo" alt="Клиент Оксана Благодатова">
                                     </div>
                                     <div class="reviews__item-right">
                                         <div class="reviews__item-info">
@@ -968,7 +968,7 @@
                             <div class="swiper-slide">
                                 <div class="reviews__item">
                                     <div class="reviews__item-left">
-                                        <img src="./images/reviews/03.png" class="reviews__item-photo" alt="Клиент Иван Корнер"/>
+                                        <img src="./images/reviews/03.png" class="reviews__item-photo" alt="Клиент Иван Корнер">
                                     </div>
                                     <div class="reviews__item-right">
                                         <div class="reviews__item-info">
