валидатор- коррекция тего

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
 
                 <div class="hero__media wow slideInRight" data-wow-duration="1s" data-wow-delay="0s">
-                    <video class="hero__video" autoplay muted loop playsinline   poster="./images/poster.webp">
+                    <video class="hero__video" autoplay muted loop playsinline poster="./images/poster.webp">
                         <source src="./video/video.mp4" type="video/mp4">
                     </video>
                     <div class="hero__overlay"></div>
@@ -188,8 +188,8 @@
                         <form class="form-request">
                             <div class="form-request__cell field">
                                 <label class="field__label" for="from">Откуда</label>
-                                <input id="from" class="field__control" list="from_city" name="from" value="" type="text"
-                                    placeholder="Москва" />
+                                <input id="from" class="field__control" list="from_city" name="from" value=""
+                                    type="text" placeholder="Москва">
                                 <datalist id="from_city">
                                     <option value="Москва">Москва</option>
                                     <option value="Санкт-Петербург">Санкт-Петербург</option>
@@ -312,7 +312,7 @@
                             <div class="form-request__cell field">
                                 <label class="field__label" for="to">Куда</label>
                                 <input id="to" class="field__control" list="to_city" name="to" value="" type="text"
-                                    placeholder="Абакан" />
+                                    placeholder="Абакан">
                                 <datalist id="to_city">
                                     <option value="Абакан">Абакан</option>
                                     <option value="Анадырь">Анадырь</option>
@@ -859,7 +859,7 @@
                                 </ol>
 
                             </div>
-                            <div class="cargo-types__modal-close icon-close1" aria-label="Закрыть модальное окно">
+                            <div class="cargo-types__modal-close icon-close1">
                                 <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1.78246 15.2175L15.2175 1.78249M1.78246 1.78249L15.2175 15.2175"
@@ -920,7 +920,8 @@
                             <div class="swiper-slide">
                                 <div class="reviews__item">
                                     <div class="reviews__item-left">
-                                        <img src="./images/reviews/01.png" class="reviews__item-photo" alt="Клиент Станицкий Михаил">
+                                        <img src="./images/reviews/01.png" class="reviews__item-photo"
+                                            alt="Клиент Станицкий Михаил">
                                     </div>
                                     <div class="reviews__item-right">
                                         <div class="reviews__item-info">
@@ -944,7 +945,8 @@
                             <div class="swiper-slide">
                                 <div class="reviews__item">
                                     <div class="reviews__item-left">
-                                        <img src="./images/reviews/02.png" class="reviews__item-photo" alt="Клиент Оксана Благодатова">
+                                        <img src="./images/reviews/02.png" class="reviews__item-photo"
+                                            alt="Клиент Оксана Благодатова">
                                     </div>
                                     <div class="reviews__item-right">
                                         <div class="reviews__item-info">
@@ -968,7 +970,8 @@
                             <div class="swiper-slide">
                                 <div class="reviews__item">
                                     <div class="reviews__item-left">
-                                        <img src="./images/reviews/03.png" class="reviews__item-photo" alt="Клиент Иван Корнер">
+                                        <img src="./images/reviews/03.png" class="reviews__item-photo"
+                                            alt="Клиент Иван Корнер">
                                     </div>
                                     <div class="reviews__item-right">
                                         <div class="reviews__item-info">
@@ -1284,7 +1287,7 @@
                     </div>
                     <div class="accordion-group">
                         <div class="accordion">
-                            <details class="accordion__details"  open>
+                            <details class="accordion__details" open>
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-1">Почему авиаперевозки?</span>
@@ -1305,7 +1308,7 @@
                             </div>
                         </div>
                         <div class="accordion">
-                            <details class="accordion__details"  >
+                            <details class="accordion__details">
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-2">Могу ли я отправить крупный груз за
@@ -1317,13 +1320,17 @@
                             <div class="accordion__content" id="faq-2" role="definition">
                                 <div class="accordion__content-inner">
                                     <div class="accordion__content-body">
-                                        <p>Да, мы принимаем крупные грузы и готовы предоставить вам самолеты с увеличенным объемом фюзеляжа и повышенной грузоподъемностью. Каждый случай для нас уникальный и мы готовы рассчитать условия такой доставки в индивидуальном порядке с возможностью оказать вам персонализированное предложение</p>
+                                        <p>Да, мы принимаем крупные грузы и готовы предоставить вам самолеты с
+                                            увеличенным объемом фюзеляжа и повышенной грузоподъемностью. Каждый случай
+                                            для нас уникальный и мы готовы рассчитать условия такой доставки в
+                                            индивидуальном порядке с возможностью оказать вам персонализированное
+                                            предложение</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="accordion">
-                            <details class="accordion__details"  >
+                            <details class="accordion__details">
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-3">Вы отправляете только крупные грузы или
@@ -1335,13 +1342,16 @@
                             <div class="accordion__content" id="faq-3" role="definition">
                                 <div class="accordion__content-inner">
                                     <div class="accordion__content-body">
-                                        <p>Мы доставляем любые грузы авиасообщением, в том числе даже деловую документацию весом всего в несколько грамм. Поэтому предлагаем написать вам нашим менеджерам через форму на сайте и мы рассчитаем для вас комфортные условия оперативной доставки</p>
+                                        <p>Мы доставляем любые грузы авиасообщением, в том числе даже деловую
+                                            документацию весом всего в несколько грамм. Поэтому предлагаем написать вам
+                                            нашим менеджерам через форму на сайте и мы рассчитаем для вас комфортные
+                                            условия оперативной доставки</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="accordion">
-                            <details class="accordion__details"  >
+                            <details class="accordion__details">
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-4">Какой максимальный срок доставки?</span>
@@ -1352,13 +1362,18 @@
                             <div class="accordion__content" id="faq-4" role="definition">
                                 <div class="accordion__content-inner">
                                     <div class="accordion__content-body">
-                                        <p>Срок доставки в большинстве случаев зависит как от города и страны отправления, так и пункта назначения доставки. При этом свои поправки в расчеты вносят и вес, габариты, условия хранения и транспортировки разных типов грузов. Поэтому срок доставки всегда лучше уточнять у нас специалистов, но можете быть уверены — авиаперевозки являются самым высокоскоростным способом доставки на сегодняшний день</p>
+                                        <p>Срок доставки в большинстве случаев зависит как от города и страны
+                                            отправления, так и пункта назначения доставки. При этом свои поправки в
+                                            расчеты вносят и вес, габариты, условия хранения и транспортировки разных
+                                            типов грузов. Поэтому срок доставки всегда лучше уточнять у нас
+                                            специалистов, но можете быть уверены — авиаперевозки являются самым
+                                            высокоскоростным способом доставки на сегодняшний день</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="accordion">
-                            <details class="accordion__details"  >
+                            <details class="accordion__details">
                                 <summary class="accordion__summary">
                                     <h4 class="accordion__title h4">
                                         <span role="term" aria-details="faq-5">Безопасно отправлять продукты питания или
@@ -1370,7 +1385,11 @@
                             <div class="accordion__content" id="faq-5" role="definition">
                                 <div class="accordion__content-inner">
                                     <div class="accordion__content-body">
-                                        <p>Однозначный ответ — да. Все дело в подготовке перевозимого контейнера или оборудовании самого грузового самолета, осуществляющего вашу перевозку. Мы всегда идем на встречу и готовы подобрать для вас борт, полностью отвечающий вашим требованиям к условиям доставки и транспортировки на любые расстояния</p>
+                                        <p>Однозначный ответ — да. Все дело в подготовке перевозимого контейнера или
+                                            оборудовании самого грузового самолета, осуществляющего вашу перевозку. Мы
+                                            всегда идем на встречу и готовы подобрать для вас борт, полностью отвечающий
+                                            вашим требованиям к условиям доставки и транспортировки на любые расстояния
+                                        </p>
                                     </div>
                                 </div>
                             </div>
