футер правка шрифта на моб

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="loading-screen__text">Сбор груза</div>
         </div>
     </div>
-    <!--— LOADING -->
+    <!--—END LOADING -->
     <!--—BEGIN HEADER -->
     <div class="full-content">
         <div class="header__wrap">
