--- a/index.html
+++ b/index.html
@@ -481,8 +481,7 @@
                                 <h3 class="about-card__title ">Срочная доставка за&nbsp;24&nbsp;часа&nbsp;по России
                                     и&nbsp;миру</h3>
                                 <div class="about-card__description">
-                                    <p>Подстроимся под ваши задачи и&nbsp;требования к&nbsp;перевозкам особых грузов.
-                                        Оптимизируем логистику до&nbsp;самой выгодной стоимости.</p>
+                                    <p>Профессиональная команда быстро спланирует и&nbsp;организует авиа-доставку от&nbsp;куда и&nbsp;куда угодно.</p>
                                 </div>
                             </div>
                         </li>
@@ -1012,7 +1011,7 @@
                                 <p>Срочная и прогнозируемая доставка, возможна только с помощью авиаперевозок. В небе
                                     нет
                                     пробок.
-                                    Действует ускоренный процесс таможенного оформления</p>
+                                    Действует ускоренный процесс таможенного оформления.</p>
                             </div>
                         </li>
                         <li class="advantages__item hover-circle hover-circle-left">
