--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                                 <h3 class="about-card__title ">Срочная доставка за&nbsp;24&nbsp;часа&nbsp;по России
                                     и&nbsp;миру</h3>
                                 <div class="about-card__description">
-                                    <p>Профессиональная команда быстро спланирует и&nbsp;организует авиа-доставку от&nbsp;куда и&nbsp;куда угодно.</p>
+                                    <p>Профессиональная команда быстро спланирует и&nbsp;организует авиа-доставку откуда и&nbsp;куда угодно.</p>
                                 </div>
                             </div>
                         </li>
