--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                             <img src="./icons/logo.svg" alt="" class="logo__image" width="140" height="32">
                         </a>
                         <div class="header__contacts">
-                            <a class="header__mail" href="mailto:info@jar-cargo.ru" title="Email" aria-label="Email">П:
+                            <a class="header__mail" href="mailto:info@jar-cargo.ru" title="Email" aria-label="Email">
                                 info@jar-cargo.ru
                             </a>
                             <a class="header__phone" href="tel:+78003510960" title="Phone" aria-label="Phone">
-                                Т: +7 (800) 351-09-60
+                                +7 (800) 351-09-60
                             </a>
                         </div>
                         <div class="menu-humb">
@@ -122,10 +122,10 @@
                     <div class="menu-mob__bottom">
                         <div class="menu-mob__contacts">
                             <a class="menu-mob__phone" href="tel:+78003510960" title="Phone" aria-label="Phone">
-                                Т: +7 (800) 351-09-60
+                                +7 (800) 351-09-60
                             </a>
                             <a class="menu-mob__mail" href="mailto:info@jar-cargo.ru" title="Email" aria-label="Email">
-                                П: info@jar-cargo.ru
+                                info@jar-cargo.ru
                             </a>
                         </div>
                         <div class="menu-mob__socials">
