--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="./libs/plugins/animate.min.css">
-    <script src="./scripts/main.js" defer></script>
+    
 </head>
 
 <body>
@@ -1524,6 +1524,7 @@
             wow.init();
         </script>
         <script src="./scripts/loader.js"></script>
+        <script src="./scripts/main.js"></script>
     </div>
 </body>
 
