--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAR-CARGO</title>
     <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./libs/plugins/swiper-bundle.min.css">
     <link rel="stylesheet" href="./libs/plugins/animate.min.css">
     
 </head>
@@ -1510,8 +1510,8 @@
             </div>
         </footer>
         <!--—END  FOOTER -->
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+        <script src="./libs/plugins/swiper-bundle.min.js"></script>
+        <script src="./libs/plugins/jquery.min.js"></script>
         <script src="./libs/plugins/wow.js"></script>
         <script>
             wow = new WOW({
